--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>React App</title>
+  <title>Villenoir</title>
+  <link rel="icon" href="https://yt3.ggpht.com/a/AGF-l79tA6dgjd_buI4cczunQ4XUirykdPvdfU_SJw=s900-c-k-c0xffffffff-no-rj-mo" type="image/x-icon">
 </head>
 
 <body>
